--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@codemirror/basic-setup": "^0.19.0",
     "@codemirror/lang-javascript": "^0.19.3",
+    "highlight.js": "^11.3.1",
     "sirv-cli": "^1.0.0"
   }
 }
