--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "ts-jest": "^27.0.3",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "tslib": "^2.0.0"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "^0.19.0",
-    "@codemirror/lang-javascript": "^0.19.3",
-    "highlight.js": "^11.3.1",
-    "sirv-cli": "^1.0.0"
+    "@codemirror/lang-javascript": "^6.0.2",
+    "@codemirror/state": "^6.1.0",
+    "codemirror": "^6.0.1",
+    "sirv-cli": "^1.0.0",
+    "typescript": "^4.7.4"
   }
 }
